# server

./: CMakeLists.txt  LICENSE  README.md  main.cpp
bscan/: CMakeLists.txt
bscan/include/hwares/: computer.h
bscan/include/swares/: operation_system.h  swares.h
bscan/src/: CMakeLists.txt
bscan/src/hwares/: computer.cpp
hwinfo/: CMakeLists.txt
modules/bscan/: CMakeLists.txt
modules/bscan/include/hwares/: computer.h  hwares.h
modules/bscan/src/: CMakeLists.txt
modules/bscan/src/hwares/: computer.cpp
modules/bscan/src/swares/: operation_system.cpp
